--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,12 @@
 @charset "utf-8";
 /* CSS Document */
 
+* {
+  box-sizing: border-box;
+}
+
 body,td,th,p{
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: 'Open Sans', Arial, Helvetica, sans-serif;
 	font-size: 10pt;
 	color: #333;
 	line-height: 1.5;
@@ -13,7 +17,7 @@ body {
 	position:relative;
 }
 ul, li {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: 'Open Sans', Arial, Helvetica, sans-serif;
 	font-size: 10pt;
 	color: #333;
 }
@@ -29,7 +33,7 @@ a img{
 	border: none 0px #fff;
 }
 h1, h2, h3, h4, h5, h6 {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Open Sans', Arial, Helvetica, sans-serif;
   margin: 0 0 20px;
 }
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
@@ -54,29 +58,31 @@ nav {
   height: 80px;
   background-color: #252831;
   text-align:center;
+  display: flex;
+  align-items: center;
 }
 nav h1 {
   margin: auto;
 }
 nav h1 a {
-  color: #fff;
+  color: rgb(136, 136, 136);
   font-size: 14pt;
   font-weight: 200;
-  letter-spacing: 10px;
+  letter-spacing: 3px;
   text-transform: uppercase;
 }
 #breadcrumb {
-    padding: 10px 40px 16px;
+    padding: 10px 20px 16px;
     list-style: none;
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    width: calc(50% - 80px);
 }
 
 /* Display list items side by side */
 #breadcrumb li {
     display: inline;
+    font-size: 1em;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
@@ -105,8 +111,11 @@ nav h1 a {
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
+  display: flex;
+  flex-direction: column;
   width: 100%;
-  height: 50px;
+  padding: 10px;
+  height: auto;
   background-color: #3397DB;
   align-items: center;
 }
@@ -120,7 +129,7 @@ nav h1 a {
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
-  font-family: Arial,sans-serif;
+  font-family: 'Open Sans', Arial,sans-serif;
   font-size: 11pt;
   height: 35px;
   letter-spacing: 0;
@@ -139,26 +148,30 @@ nav h1 a {
 }
 #restaurants-list li {
   background-color: #fff;
-  border: 2px solid #ccc;
-  font-family: Arial,sans-serif;
-  margin: 15px;
+  border-top-left-radius: 25px;
+  border-bottom-right-radius: 25px;
+  font-family: 'Open Sans', Arial,sans-serif;
+  margin: 15px 0 ;
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
-  width: 270px;
+  display: inline-block;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
-  max-width: 100%;
+  border-top-left-radius: 25px;
+  max-width: calc(100% + 60px);
   min-height: 248px;
   min-width: 100%;
+  margin: 0 -30px;
 }
 #restaurants-list li h1 {
   color: #f18200;
-  font-family: Arial,sans-serif;
-  font-size: 14pt;
+  font-family: 'Open Sans', Arial,sans-serif;
+  font-size: 12pt;
+  white-space: nowrap;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
@@ -191,26 +204,31 @@ nav h1 a {
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
+  position: relative;
   right: 0;
-  top: 80px;
-  width: 50%;
+  top: 130px;
+  height: 350px;
+  width: 100%;
 }
 .inside #map {
   background-color: #ccc;
   height: 100%;
   width: 100%;
 }
+
+#map .leaflet-top,
+#map .leaflet-bottom  {
+  z-index: 400;
+}
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
+  width: 100%;
 }
 #restaurant-name {
   color: #f18200;
-  font-family: Arial,sans-serif;
-  font-size: 20pt;
+  font-family: 'Open Sans', Arial,sans-serif;
+  font-size: 18pt;
   font-weight: 200;
   letter-spacing: 0;
   margin: 15px 0 30px;
@@ -218,7 +236,8 @@ nav h1 a {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 90%;
+  border-top-left-radius: 25px;
+	width: 100%;
 }
 #restaurant-address {
   font-size: 12pt;
@@ -227,30 +246,29 @@ nav h1 a {
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
+  border-bottom-right-radius: 25px;
   font-size: 12pt;
   font-weight: 300;
   letter-spacing: 10px;
-  margin: 0 0 20px;
+  margin: -6px 0 20px;
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+	width: 100%;
 }
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+  padding: 140px 20px 30px;
 }
 #reviews-container {
-  padding: 30px 40px 80px;
+  padding: 30px 20px 80px;
 }
 #reviews-container h2 {
   color: #f58500;
   font-size: 24pt;
   font-weight: 300;
-  letter-spacing: -1px;
-  padding-bottom: 1pt;
+  letter-spacing: 1px;
 }
 #reviews-list {
   margin: 0;
@@ -258,18 +276,59 @@ nav h1 a {
 }
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 2px solid #f3f3f3;
+  border-top-left-radius: 25px;
+  border-bottom-right-radius: 25px;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
   overflow: hidden;
   padding: 0 20px 20px;
   position: relative;
-  width: 85%;
+  width: 100%;
 }
 #reviews-list li p {
   margin: 0 0 10px;
 }
+#reviews-list li div {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 -20px;
+  padding: 10px 20px;
+  background-color: #303030;
+}
+#reviews-list li .name {
+  color: rgb(233, 233, 233);
+  font-size: 1.2em;
+}
+#reviews-list li .date {
+  color: rgb(197, 197, 197);
+}
+#reviews-list li .rating {
+  display: inline-block;
+  color: rgb(255, 255, 255);
+  margin: 1em 0;
+  padding: 0.3em 0.5em;
+  background-color: #FCA503;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
 #restaurant-hours td {
   color: #666;
+}
+
+@media (min-width: 600px) {
+  .filter-options h2 {
+    flex-basis: 100%;
+    text-align: center;
+  }
+  .filter-options {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  #restaurants-list li {
+    margin: 15px;
+    width: 270px;
+  }
 }
