--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,12 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   background-color: #f3f3f3;
   min-height: 100%;
 }
+.inside #maincontent {
+  background-color: #f3f3f3;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
 #footer {
   background-color: #444;
   color: #aaa;
@@ -318,6 +324,9 @@ nav h1 a {
 }
 
 @media (min-width: 600px) {
+  .inside #maincontent {
+    flex-direction: row;
+  }
   .filter-options h2 {
     flex-basis: 100%;
     text-align: center;
@@ -330,5 +339,14 @@ nav h1 a {
   #restaurants-list li {
     margin: 15px;
     width: 270px;
+  }
+  #inner-container {
+    width: 50%;
+  }
+  .inside #map-container {
+    order: 1;
+    min-height: 100%;
+    width: 50%;
+    margin-right: 20px;
   }
 }
