--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 #footer {
   background-color: #444;
-  color: #aaa;
+  color: #b1b0b0;
   font-size: 8pt;
   letter-spacing: 1px;
   padding: 25px;
@@ -71,7 +71,7 @@ nav h1 {
   margin: auto;
 }
 nav h1 a {
-  color: rgb(136, 136, 136);
+  color: #b1b0b0;
   font-size: 14pt;
   font-weight: 200;
   letter-spacing: 3px;
@@ -100,7 +100,7 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    color: #0058a4;
     text-decoration: none;
 }
 
@@ -122,7 +122,7 @@ nav h1 a {
   width: 100%;
   padding: 10px;
   height: auto;
-  background-color: #3397DB;
+  background-color: #2078b4;
   align-items: center;
 }
 .filter-options h2 {
@@ -174,7 +174,7 @@ nav h1 a {
   margin: 0 -30px;
 }
 #restaurants-list li h1 {
-  color: #f18200;
+  color: #b95c02;
   font-family: 'Open Sans', Arial,sans-serif;
   font-size: 12pt;
   white-space: nowrap;
@@ -189,7 +189,7 @@ nav h1 a {
   font-size: 11pt;
 }
 #restaurants-list li a {
-  background-color: orange;
+  background-color: #9e5600;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
@@ -232,7 +232,7 @@ nav h1 a {
   width: 100%;
 }
 #restaurant-name {
-  color: #f18200;
+  color: #9e5600;
   font-family: 'Open Sans', Arial,sans-serif;
   font-size: 18pt;
   font-weight: 200;
@@ -271,7 +271,7 @@ nav h1 a {
   padding: 30px 20px 80px;
 }
 #reviews-container h2 {
-  color: #f58500;
+  color: #9e5600;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: 1px;
@@ -315,7 +315,7 @@ nav h1 a {
   color: rgb(255, 255, 255);
   margin: 1em 0;
   padding: 0.3em 0.5em;
-  background-color: #FCA503;
+  background-color: #9e5600;
   text-transform: uppercase;
   letter-spacing: 2px;
 }
