--- a/css/styles.css
+++ b/css/styles.css
@@ -241,7 +241,7 @@ nav h1 a {
   text-transform: uppercase;
   line-height: 1.1;
 }
-#restaurant-img {
+#restaurant-img .restaurant-img {
   border-top-left-radius: 25px;
 	width: 100%;
 }
